# beatmeter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
beatmeter/: __init__.py  config.py  experiment.py  main.py
beatmeter/analysis/: beat_tracking.py  cache.py  engine.py  mert.py  meter.py  models.py  onset.py  resnet_signal.py  spectrogram_signal.py  tempo.py
beatmeter/api/: schemas.py  upload.py  websocket.py
beatmeter/audio/: loader.py  preprocessing.py  stream.py
data/wikimeter/: blacklist.json
docs/: MERT-LORA-MULTILABEL.md  METER-CATEGORIES-ANALYSIS.md  PIPELINE.md  PRD-tapped-rhythm-ux.md  PUBLICATION_GAPS.md  RESEARCH.md  WIKIMETER-SECOND-AGENT-CHECKLIST.md  WIKIMETER-SECOND-AGENT-PROMPT.md  experiment-log.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  audio-capture.js  file-upload.js  i18n.js  metronome.js  visualizer.js
notebooks/: colab_mert_lora.ipynb
scripts/: dashboard.py  download_fixtures.py  download_meter2800.py  download_new_fixtures.py  eval.py  eval_meter2800.py  eval_worker.py  fixtures_manifest.json  gt_suspect_review.py  new_fixture_entries.json  search_wikimedia.py  train_meter_resnet.py  utils.py  validate_fixtures.py  visualize.py  visualize_meter_net.py  wikimedia_candidates.json
scripts/setup/: build_wikimeter_review_queue.py  collect_wikimeter_candidates.py  download_ballroom.py  download_meter2800.py  download_oddmeter_wiki.py  (+14 more)
tests/: benchmark.py  benchmark_results.json  conftest.py  diagnose_failures.py  diagnose_quality.py  test_engine.py  test_meter.py  test_real_audio.py
(+41 files in other folders)
