[project]
name = "beatmeter"
version = "0.1.0"
description = "Audio tempo and time signature analyzer"
readme = "README.md"
authors = [
    { name = "jasisz", email = "jasisz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "librosa>=0.10.0",
    "numpy<2.0",
    "scipy>=1.12.0",
    "soundfile>=0.12.0",
    "madmom",
    "websockets>=12.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "BeatNet",
    "numba>=0.59.0",
    "beat-this",
    "pyaudio>=0.2.14",
]

[project.scripts]
beatmeter = "beatmeter.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beatmeter"]

[tool.uv.sources]
madmom = { git = "https://github.com/CPJKU/madmom.git", rev = "27f032e8" }
BeatNet = { git = "https://github.com/mjhydri/BeatNet.git", rev = "40336132" }
beat-this = { git = "https://github.com/CPJKU/beat_this.git", rev = "2c0389b0" }

[tool.uv]
override-dependencies = [
    "numba>=0.59.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
